2010-06-16  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4 (VL_LIB_READLINE): Add a --with[out]-readline configure
    option so people can explicitly control support for the library.

2010-06-15  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/s3c4510x.c: Punt dead/useless cvs log info.

  * src/tap/cable.c (urj_tap_cable_create): Call urj_bus_buses_delete() rather
    than manipulate urj_bus directly so the urj_buses structure doesn't get
    corrupted.  Otherwise we segfault when changing cables after initializing a
    bus: cable probe; detect; initbus ...; detectflash ...; cable probe; detect
  * src/apps/jtag/jtag.c (cleanup): Call urj_bus_buses_free() to clean up all
    buses and not just the active one.
    http://blackfin.uclinux.org/gf/tracker/6028

2010-06-14  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Drop stropts.h check since parport code no longer uses it.

  * configure.ac: Check for sys/wait.h usability.
  * src/cmd/cmd_bfin.c: Include sys/wait.h when available since we use macros
    from it, and change the mingw check to key off this header instead to make
    things a bit more portable.

  * src/tap/parport/ppi.c (ppi_connect): Fix return type to match expected,
    and tweak style to match ppdev.c better.

  * src/tap/idcode.c (urj_tap_idcode): Fix typo in comment (bits, not bytes),
    fix local types so we don't mismatch signs, and avoid leaking register
    allocations with the error handling.

  * include/urjtag/bfin.h (scans), include/urjtag/bus.h (urj_bus_drivers),
    include/urjtag/cable.h (urj_tap_cable_drivers), include/urjtag/flash.h
    (urj_flash_flash_drivers), include/urjtag/params.h (urj_param_list_t.list),
    include/urjtag/parport.h (urj_tap_parport_drivers),
    include/urjtag/usbconn.h (urj_tap_usbconn_drivers), src/bfin/bfin.c
    (scans), src/bus/buses.c (urj_bus_drivers, bus_param), src/flash/flash.c
    (urj_flash_flash_drivers), src/tap/cable.c (urj_tap_cable_drivers),