@@ -116,6 +116,8 @@ else
 fi
 
 AC_CHECK_FUNCS(m4_flatten([
+	geteuid
+	getuid
 	nanosleep
 	swprintf
 	usleep
