@@ -3,6 +3,9 @@
   * acinclude.m4 (VL_LIB_READLINE): Add a --with[out]-readline configure
     option so people can explicitly control support for the library.
 
+  * configure.ac (AC_CHECK_FUNCS): Check for geteuid and getuid functions.
+  * sysdep.h: Key off of HAVE_xxx defines for geteuid/getuid stubs.
+
 2010-06-15  Mike Frysinger  <vapier@gentoo.org>
 
   * src/bus/s3c4510x.c: Punt dead/useless cvs log info.
